Starting on Docker Compose

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,12 +1,17 @@
 server {
 		
-		listen 80;
+		listen 443 ssl;
+		listen [::]:443 ssl;
+
+		ssl_certificate  /etc/ssl/nginx-selfsigned.pem;
+		ssl_certificate_key /etc/ssl/nginx-selfsigned.key;
+
+		ssl_protocols TLSv1.2 TLSv1.3;
 
 		server_name login.42.fr;
 	
 		location / {
 			root /var/www/html;
-			index index.inception.html ; #index.nginx-debian.html
+			index index.inception.html ;
 		}
-
 }
