--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Dockerfile                                         :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: mde-sa-- <mde-sa--@student.42porto.com>    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/11/05 18:02:47 by mde-sa--          #+#    #+#              #
+#    Updated: 2024/11/05 18:02:48 by mde-sa--         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 FROM debian:bullseye
 
 RUN apt -y update && apt install -y nginx openssl
