--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,3 +1,15 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    nginx.conf                                         :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: mde-sa-- <mde-sa--@student.42porto.com>    +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2024/11/05 18:02:41 by mde-sa--          #+#    #+#              #
+#    Updated: 2024/11/05 18:02:43 by mde-sa--         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 server {
 		
 		listen 443 ssl;
