--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -6,24 +6,74 @@
 #    By: mde-sa-- <mde-sa--@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/11/05 18:02:37 by mde-sa--          #+#    #+#              #
-#    Updated: 2024/11/05 18:02:38 by mde-sa--         ###   ########.fr        #
+#    Updated: 2024/11/08 11:58:10 by mde-sa--         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 services:
+  mariadb:
+    container_name: mariadb
+    image: mariadb
+    build: ./requirements/mariadb
+    volumes:
+      - mariadb:/var/lib/mysql
+    ports:
+      - 3306:3306
+    env_file:
+      - .env
+    networks:
+      - inception
+    restart: always
+
+  wordpress:
+    container_name: wordpress
+    image: wordpress
+    build: ./requirements/wordpress
+    ports:
+      - 9000:9000
+    depends_on:
+      - mariadb
+    volumes:
+      - wordpress:/var/www/wordpress
+    env_file:
+      - .env
+    networks:
+      - inception
+    restart: always
+
   nginx:
     container_name: nginx
     image: nginx
     build: ./requirements/nginx
     ports:
       - 443:443
-    #    depends_on:
-    #  - wordpress
-    # volumes:
-    # - wordpress:/var/www/wordpress
+    depends_on:
+      - wordpress
+    volumes:
+      - wordpress:/var/www/wordpress
+    env_file:
+      - .env
     networks:
       - inception
     restart: always
+
+
+volumes:
+  mariadb:
+    name: mariadb
+    driver: local
+    driver_opts:
+      device: /home/miguel/Coding/42Porto/CommonCore/Inception/data/mariadb 
+      o: bind
+      type: none
+
+  wordpress:
+    name: wordpress
+    driver: local
+    driver_opts:
+      device: /home/miguel/Coding/42Porto/CommonCore/Inception/data/wordpress
+      o: bind
+      type: none
 
 networks:
   inception:
