--- a/srcs/requirements/nginx/conf/nginx_template.conf
+++ b/srcs/requirements/nginx/conf/nginx_template.conf
@@ -6,7 +6,7 @@
 #    By: mde-sa-- <mde-sa--@student.42porto.com>    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/11/05 18:02:41 by mde-sa--          #+#    #+#              #
-#    Updated: 2024/11/05 18:02:43 by mde-sa--         ###   ########.fr        #
+#    Updated: 2024/11/08 11:44:46 by mde-sa--         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,15 +15,23 @@ server {
 		listen 443 ssl;
 		listen [::]:443 ssl;
 
+		server_name $DOMAIN_NAME;
+
+		root /var/www/wordpress;
+
+		index index.php index.html;
+
 		ssl_certificate  /etc/ssl/nginx-selfsigned.pem;
 		ssl_certificate_key /etc/ssl/nginx-selfsigned.key;
 
 		ssl_protocols TLSv1.2 TLSv1.3;
 
-		server_name login.42.fr;
-	
 		location / {
-			root /var/www/html;
-			index index.inception.html ;
+			try_files $uri $uri/ /index.php?$args;
+		}
+
+		location ~\.php$ {
+			include snippets/fastcgi-php.conf;
+			fastcgi_pass wordpress:9000;
 		}
 }
