--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Dockerfile                                         :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: mde-sa-- <mde-sa--@student.42porto.com>    +#+  +:+       +#+         #
+#    By: miguel <miguel@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/11/05 18:02:47 by mde-sa--          #+#    #+#              #
-#    Updated: 2024/11/05 18:02:48 by mde-sa--         ###   ########.fr        #
+#    Updated: 2024/12/14 11:12:36 by miguel           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
