Small Makefile / env changes

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,6 @@
-DOMAIN_NAME=login.42.fr
+DOMAIN_NAME=mde-sa--.42.pt
+WP_DATA=~/data/wordpress/
+DB_DATA=~/data/mariadb/
 
 # MariaDB Setup
 DB_NAME=db_name
@@ -18,4 +20,4 @@ WP_USERNAME=wp_username
 WP_USER_PWD=wp_username_password
 WP_USER_ROLE=wp_user_role
 WP_USER_EMAIL=user@email.com
-WP_URL=https://login.42.fr
+WP_URL=https://mde-sa--.42.pt
