--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -14,7 +14,7 @@ FROM debian:bullseye
 
 RUN apt-get update -y && apt-get install mariadb-server -y
 
-COPY ./conf/mariadb_setup.sh /mariadb_setup.sh
+COPY ./conf/mariadb_setup.sh /
 
 RUN chmod +x /mariadb_setup.sh
 
