--- a/srcs/.env
+++ b/srcs/.env
@@ -1,19 +1,19 @@
 # MariaDB Setup
-DB_NAME=db_name
-DB_HOST=db_host
-DB_USER=db_user
-DB_PWD=db_password
-DB_R_PWD=db_read_password
+DB_NAME=top_secret_db
+DB_HOST=host_da_db
+DB_USER=secret_agent
+DB_PWD=trust_no_one
+DB_R_PWD=you_cannot_read_this
 
 # Wordpress Admin Setup
-WP_ADMIN=wp_admin
-WP_ADMIN_PWD=wp_admin_password
+WP_ADMIN=o_maior_do_wp
+WP_ADMIN_PWD=querias
 WP_TITLE="My Wordpress Title"
-WP_ADMIN_EMAIL=admin@email.com
+WP_ADMIN_EMAIL=omaior@email.com
 
 # Wordpress New User Setup
-WP_USERNAME=wp_username
-WP_USER_PWD=wp_username_password
-WP_USER_ROLE=wp_user_role
-WP_USER_EMAIL=user@email.com
+WP_USERNAME=peasant
+WP_USER_PWD=open_sesame
+WP_USER_ROLE=underling
+WP_USER_EMAIL=underling@email.com
 WP_URL=https://mde-sa--.42.pt
