Added needed domain name

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,9 +1,9 @@
+DOMAIN_NAME=mde-sa--.42.pt
+
 # MariaDB Setup
 DB_NAME=top_secret_db
-DB_HOST=host_da_db
 DB_USER=secret_agent
 DB_PWD=trust_no_one
-DB_R_PWD=you_cannot_read_this
 
 # Wordpress Admin Setup
 WP_ADMIN=o_maior_do_wp
@@ -16,4 +16,3 @@ WP_USERNAME=peasant
 WP_USER_PWD=open_sesame
 WP_USER_ROLE=underling
 WP_USER_EMAIL=underling@email.com
-WP_URL=https://mde-sa--.42.pt
